feat: add login function
