# internal/app/api/user_api.go
@@ -23,3 +23,20 @@ func Register(c *gin.Context) {
 
 	service.Register(c, sur)
 }
+
+// @Summary 登录接口
+// @Description 用户登录
+// @Param request body schema.UserLogin true "user message"
+// @Accept       json
+// @Produce      json
+// @Success      200  {object}  error.ResponseNormal
+// @Router       /user/login [post]
+func Login(c *gin.Context) {
+	var sul schema.UserLogin
+	if err := c.ShouldBindJSON(&sul); err != nil {
+		error.Response(c, error.BadRequest, gin.H{}, "输入内容有误！")
+		return
+	}
+
+	service.Login(c, sul)
+}
