# internal/app/schema/user_schema.go
@@ -6,3 +6,14 @@ type UserRegister struct {
 	Email      string `json:"email"`
 	VerifyCode string `json:"verify_code"`
 }
+
+type UserLogin struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
+
+type ResponseMenu struct {
+	ID    string `json:"id"`
+	Title string `json:"title"`
+	Path  string `json:"path"`
+}
